[package]
name = "roaes"
description = "library"
version = "0.1.0"
edition = "2018"
authors = ["moschroe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
bitflags = "1.3.2"
block-modes = "0.8.1"
rand = "0.8.4"
snafu = "0.6.10"
typenum = "1.14.0"
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies]
rhexdump = "0.1.1"