[package]
name = "roaes"
description = "Rust implementation of openaes file format."
version = "0.1.2"
authors = ["moschroe"]
edition = "2018"
license = "BSD-3-Clause"
keywords = ["openaes", "TWRP", "android"]
categories = ["command-line-utilities", "parser-implementations", "cryptography"]
repository = "https://github.com/moschroe/roaes"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
aes = "0.7.5"
bitflags = "1.3.2"
block-modes = "0.8.1"
rand = "0.8.4"
snafu = "0.6.10"
typenum = "1.14.0"
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies]
rhexdump = "0.1.1"